--- a/src/Resources/Views/buscarVentas.fxml
+++ b/src/Resources/Views/buscarVentas.fxml
@@ -133,6 +133,7 @@
       <Separator fx:id="linea7" layoutX="-1.0" layoutY="366.0" prefHeight="7.0" prefWidth="872.0" />
       <Separator fx:id="linea8" layoutY="401.0" prefHeight="7.0" prefWidth="400.0" />
       <Separator fx:id="linea9" layoutX="-3.0" layoutY="432.0" prefHeight="7.0" prefWidth="400.0" />
-      <Label fx:id="labelPdfAlert" layoutX="575.0" layoutY="385.0" prefHeight="17.0" prefWidth="254.0" />
+      <Label fx:id="labelPdfAlert" layoutX="567.0" layoutY="385.0" prefHeight="17.0" prefWidth="254.0" />
+      <Button fx:id="btnFotoPlano" layoutX="460.0" layoutY="417.0" mnemonicParsing="false" onAction="#btnFotoPlanoClicked" style="-fx-background-color: Black;" text="Foto de Plano" textFill="WHITE" />
    </children>
 </AnchorPane>
