--- a/src/Resources/Views/dashboard.fxml
+++ b/src/Resources/Views/dashboard.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Seller.dashboardSellerController">
+<AnchorPane prefHeight="655.0" prefWidth="1279.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Seller.dashboardSellerController">
    <children>
       <Label layoutX="14.0" layoutY="85.0" text="Fecha:" />
       <Label fx:id="fechaLabel" layoutX="68.0" layoutY="85.0" prefHeight="17.0" prefWidth="111.0" />
-      <ButtonBar layoutX="-3.0" layoutY="-1.0" prefHeight="49.0" prefWidth="1294.0">
+      <ButtonBar layoutX="-6.0" prefHeight="49.0" prefWidth="1310.0">
          <buttons>
             <Button fx:id="btnBachas" mnemonicParsing="false" onAction="#btnBachasClicked" style="-fx-background-color: ffaa00;" text="Bachas" />
             <Button fx:id="btnPedidos" minWidth="48.0" mnemonicParsing="false" onAction="#btnPedidosClicked" prefHeight="26.0" style="-fx-background-color: ffaa00;" text="Pedidos" />
@@ -25,7 +25,7 @@
                 <MenuItem fx:id="btnVentasModificarEstado" mnemonicParsing="false" onAction="#btnVentasModificarEstadoClicked" text="Modificar Estado de Venta" />
               </items>
             </MenuButton>
-            <Button fx:id="btnCaja" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnCajaClicked" style="-fx-background-color: FFAA00;" text="Caja" />
+            <Button fx:id="btnCaja" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnCajaClicked" style="-fx-background-color: FFAA00;" text="Registrar Entrada de Dinero" />
             <Button fx:id="btnCerrarSesion" mnemonicParsing="false" onAction="#btnCerrarSesionClicked" prefHeight="26.0" prefWidth="495.0" style="-fx-background-color: Grey;" text="Cerrar Sesion" textFill="WHITE" />
          </buttons>
       </ButtonBar>
@@ -35,12 +35,15 @@
          </font>
       </Label>
       <Label fx:id="cotizacionDolarBlue" layoutX="60.0" layoutY="174.0" prefHeight="17.0" prefWidth="89.0" textFill="#007c46" />
-      <Button fx:id="BtnCotizaciones" layoutX="519.0" layoutY="178.0" mnemonicParsing="false" onAction="#BtnCotizacionesClicked" style="-fx-background-color: FFAA00;" text="Actualizar Cotizacion" />
-      <Separator layoutX="2.0" layoutY="50.0" prefHeight="17.0" prefWidth="1294.0" />
+      <Button fx:id="BtnCotizaciones" layoutX="186.0" layoutY="142.0" mnemonicParsing="false" onAction="#BtnCotizacionesClicked" style="-fx-background-color: FFAA00;" text="Actualizar Cotizacion" />
+      <Separator layoutX="-1.0" layoutY="50.0" prefHeight="17.0" prefWidth="1301.0" />
       <Separator layoutX="-3.0" layoutY="121.0" prefHeight="10.0" prefWidth="1301.0" />
-      <TableView fx:id="tablaVentasResumen" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="250.0" />
+      <TableView fx:id="tablaVentasResumen" prefHeight="400.0" prefWidth="1304.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="250.0" />
       <Label fx:id="fechaUltimaBlue" layoutX="14.0" layoutY="208.0" prefHeight="17.0" prefWidth="248.0" />
-      <Separator layoutX="693.0" layoutY="125.0" orientation="VERTICAL" prefHeight="124.0" prefWidth="13.0" />
-      <TableView fx:id="bachasTablaPreview" layoutX="714.0" layoutY="129.0" prefHeight="108.0" prefWidth="577.0" />
+      <Separator layoutX="323.0" layoutY="125.0" orientation="VERTICAL" prefHeight="124.0" prefWidth="11.0" />
+      <TableView fx:id="bachasTablaPreview" layoutX="711.0" layoutY="125.0" prefHeight="124.0" prefWidth="592.0" />
+      <Separator layoutX="708.0" layoutY="125.0" orientation="VERTICAL" prefHeight="124.0" prefWidth="0.0" />
+      <Label layoutX="453.0" layoutY="134.0" text="Mensajes del Dia:" />
+      <Label fx:id="msjDelDia" layoutX="329.0" layoutY="163.0" prefHeight="82.0" prefWidth="380.0" wrapText="true"/>
    </children>
 </AnchorPane>
