--- a/bin/Resources/Views/buscarVentas.fxml
+++ b/bin/Resources/Views/buscarVentas.fxml
@@ -134,6 +134,6 @@
       <Separator fx:id="linea8" layoutY="401.0" prefHeight="7.0" prefWidth="400.0" />
       <Separator fx:id="linea9" layoutX="-3.0" layoutY="432.0" prefHeight="7.0" prefWidth="400.0" />
       <Label fx:id="labelPdfAlert" layoutX="567.0" layoutY="385.0" prefHeight="17.0" prefWidth="254.0" />
-      <Button fx:id="btnFotoPlano" layoutX="460.0" layoutY="417.0" mnemonicParsing="false" onAction="#btnFotoPlanoClicked" style="-fx-background-color: Black;" text="Foto de Plano" textFill="WHITE" />
+      <Button fx:id="btnFotoPlano" layoutX="460.0" layoutY="417.0" mnemonicParsing="false" onAction="#btnFotoPlanoClicked" style="-fx-background-color: Black;" text="Ver Planos" textFill="WHITE" />
    </children>
 </AnchorPane>
