--- a/bin/Resources/Views/cargarPlano.fxml
+++ b/bin/Resources/Views/cargarPlano.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Glow?>
@@ -17,16 +18,16 @@
             <Glow level="0.45" />
          </effect>
       </Label>
-      <Label layoutX="60.0" layoutY="143.0" text="Ingrese ID VENTA que pertenece el plano:" />
-      <TextField fx:id="idTextField" layoutX="316.0" layoutY="138.0" prefHeight="26.0" prefWidth="125.0" />
+      <Label layoutX="49.0" layoutY="105.0" text="Ingrese ID VENTA que pertenece el plano:" />
+      <TextField fx:id="idTextField" layoutX="316.0" layoutY="100.0" prefHeight="26.0" prefWidth="150.0" />
       <Button fx:id="btnVolver" layoutX="276.0" layoutY="463.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: FFAA00;" text="Volver" />
       <Label fx:id="firstAlert" alignment="CENTER" layoutX="-2.0" layoutY="294.0" prefHeight="17.0" prefWidth="602.0" />
-      <Button fx:id="btnSeleccionarArchivo" layoutX="316.0" layoutY="250.0" mnemonicParsing="false" onAction="#btnSeleccionarArchivoClicked" text="Seleccionar Archivo" />
+      <Button fx:id="btnSeleccionarArchivo" layoutX="316.0" layoutY="250.0" mnemonicParsing="false" onAction="#btnSeleccionarArchivoClicked" prefHeight="26.0" prefWidth="150.0" text="Seleccionar Archivo" />
       <Label fx:id="labelIndicator" layoutX="144.0" layoutY="255.0" text="Cargue la foto del Plano:" />
       <Button fx:id="btnCargar" layoutX="275.0" layoutY="347.0" mnemonicParsing="false" onAction="#btnCargarClicked" text="Cargar" />
-      <Label layoutX="185.0" layoutY="185.0" text="Ingrese Material:" />
-      <Label layoutX="201.0" layoutY="219.0" text="Ingrese color:" />
-      <TextField fx:id="materialTextField" layoutX="316.0" layoutY="181.0" prefHeight="26.0" prefWidth="125.0" />
-      <TextField fx:id="colorTextField" layoutX="316.0" layoutY="215.0" prefHeight="26.0" prefWidth="125.0" />
+      <Label layoutX="185.0" layoutY="156.0" text="Ingrese Material:" />
+      <Label layoutX="194.0" layoutY="207.0" text="Ingrese color:" />
+      <ComboBox fx:id="materialComboBox" onAction="#materialComboBoxChanged" prefWidth="200.0" layoutX="316.0" layoutY="151.0" />
+      <ComboBox fx:id="colorCombobox" layoutX="316.0" layoutY="202.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
