--- a/src/main/java/com/verona/view/managerDashboard.fxml
+++ b/src/main/java/com/verona/view/managerDashboard.fxml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="797.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.manager.ManagerDashboardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="797.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.manager.ManagerDashboardController">
    <children>
       <ButtonBar prefHeight="40.0" prefWidth="782.0">
         <buttons>
@@ -17,5 +22,17 @@
           <Button fx:id="btnCerrarSesion" mnemonicParsing="false" onAction="#btnCerrarSesionClicked" prefHeight="26.0" style="-fx-background-color: black;" text="Cerrar Sesion" textFill="WHITE" />
         </buttons>
       </ButtonBar>
+      <PieChart fx:id="graficoEntradasYSalidas" layoutX="73.0" layoutY="45.0" prefHeight="215.0" prefWidth="246.0" />
+      <Separator layoutX="389.0" layoutY="44.0" orientation="VERTICAL" prefHeight="482.0" prefWidth="20.0" />
+      <Separator layoutY="40.0" prefHeight="11.0" prefWidth="797.0" />
+      <Separator layoutY="255.0" prefHeight="11.0" prefWidth="797.0" />
+      <LineChart fx:id="graphVentasPorMes" layoutX="-2.0" layoutY="260.0" prefHeight="259.0" prefWidth="400.0">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </LineChart>
    </children>
 </AnchorPane>
