--- a/src/main/java/com/verona/view/verProduccion.fxml
+++ b/src/main/java/com/verona/view/verProduccion.fxml
@@ -2,18 +2,68 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.manager.VerProduccionController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="548.0" prefWidth="752.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.manager.VerProduccionController">
    <children>
-      <Button fx:id="btnVolver" layoutX="273.0" layoutY="344.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: FFAA00;" text="Volver" />
-      <TableView fx:id="tablaPlanosProduccion" layoutX="-1.0" layoutY="78.0" prefHeight="200.0" prefWidth="600.0" />
-      <ButtonBar layoutX="60.0" layoutY="14.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="478.0">
+      <Button fx:id="btnVolver" layoutX="325.0" layoutY="509.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: Black;" text="Volver" textFill="WHITE">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font>
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color opacity="0.6000000238418579" />
+               </color>
+            </DropShadow>
+         </effect></Button>
+      <TableView fx:id="tablaPlanosProduccion" layoutX="-1.0" layoutY="78.0" prefHeight="411.0" prefWidth="752.0">
+        <columns>
+          <TableColumn fx:id="colCodigoPlano" prefWidth="103.0" text="Codigo de Plano" />
+          <TableColumn fx:id="colMaterial" prefWidth="57.0" text="Material" />
+          <TableColumn fx:id="colColor" prefWidth="103.0" text="Color" />
+          <TableColumn fx:id="colEstado" prefWidth="99.0" text="Estado" />
+          <TableColumn fx:id="colVentasID" prefWidth="77.0" text="ID de venta" />
+          <TableColumn fx:id="colImagen" prefWidth="89.0" text="Imagenes" />
+          <TableColumn fx:id="colFechaTerminacion" prefWidth="146.0" text="Fecha de Terminacion" />
+        </columns>
+      </TableView>
+      <ButtonBar layoutX="2.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="53.0" prefWidth="760.0">
         <buttons>
-            <Button fx:id="btnModificarPlano" mnemonicParsing="false" onAction="#btnModificarPlanoClicked" style="-fx-background-color: FFAA00;" text="Modificar Foto de Plano" />
-            <Button fx:id="btnBorrarPlano" mnemonicParsing="false" onAction="#btnBorrarPlanoClicked" style="-fx-background-color: FFAA00;" text="Borrar Plano" />
-          <Button fx:id="btnCargarPlanos" mnemonicParsing="false" onAction="#btnCargarPlanosClicked" style="-fx-background-color: FFAA00;" text="Cargar Planos" />
+            <Button fx:id="btnBorrarPlano" mnemonicParsing="false" onAction="#btnBorrarPlanoClicked" style="-fx-background-color: FFAA00;" text="Borrar Plano">
+               <font>
+                  <Font name="Arial Bold" size="13.0" />
+               </font>
+               <effect>
+                  <DropShadow />
+               </effect></Button>
+            <Button fx:id="btnModificarPlano" mnemonicParsing="false" onAction="#btnModificarPlanoClicked" style="-fx-background-color: FFAA00;" text="Modificar Plano">
+               <font>
+                  <Font name="Arial Bold" size="13.0" />
+               </font>
+               <effect>
+                  <DropShadow />
+               </effect></Button>
+            <Button fx:id="btnCambiarEstadoPlano" mnemonicParsing="false" onAction="#btnCambiarEstadoPlanoClicked" prefHeight="25.0" style="-fx-background-color: FFAA00;" text="Cambiar Estado de Plano">
+               <font>
+                  <Font name="Arial Bold" size="13.0" />
+               </font>
+               <effect>
+                  <DropShadow />
+               </effect>
+            </Button>
+          <Button fx:id="btnCargarPlanos" mnemonicParsing="false" onAction="#btnCargarPlanosClicked" prefHeight="26.0" prefWidth="197.0" style="-fx-background-color: FFAA00;" text="Cargar Planos">
+               <font>
+                  <Font name="Arial Bold" size="13.0" />
+               </font>
+               <effect>
+                  <DropShadow />
+               </effect></Button>
         </buttons>
       </ButtonBar>
    </children>
