--- a/src/main/java/com/verona/view/bachas.fxml
+++ b/src/main/java/com/verona/view/bachas.fxml
@@ -3,16 +3,29 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="508.0" prefWidth="733.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.common.BachasController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="593.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.common.BachasController">
    <children>
-      <TableView fx:id="tablaBachasStock" layoutX="48.0" layoutY="87.0" prefHeight="234.0" prefWidth="638.0" />
-      <Button fx:id="btnIngresarBachas" layoutX="152.0" layoutY="348.0" mnemonicParsing="false" onAction="#btnIngresarBachasClicked" style="-fx-background-color: FFAA00;" text="Ingresar Bachas" />
-      <Button fx:id="btnVolver" layoutX="340.0" layoutY="452.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: FFAA00;" text="Volver" />
-      <Label layoutX="248.0" layoutY="28.0" prefHeight="39.0" prefWidth="236.0" text="Bachas en Stock">
+      <TableView fx:id="tablaBachasStock" layoutX="23.0" layoutY="149.0" prefHeight="353.0" prefWidth="467.0" />
+      <Button fx:id="btnIngresarBachas" layoutX="352.0" layoutY="26.0" mnemonicParsing="false" onAction="#btnIngresarBachasClicked" style="-fx-background-color: FFAA00;" text="Ingresar Bachas">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font>
+         <effect>
+            <DropShadow />
+         </effect></Button>
+      <Button fx:id="btnVolver" layoutX="377.0" layoutY="545.0" mnemonicParsing="false" onAction="#btnVolverClicked" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: Black;" text="Volver" textFill="WHITE">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font>
+         <effect>
+            <DropShadow />
+         </effect></Button>
+      <Label layoutX="139.0" layoutY="96.0" prefHeight="39.0" prefWidth="248.0" text="Bachas en Stock">
          <font>
             <Font name="System Bold" size="32.0" />
          </font>
@@ -20,6 +33,14 @@
             <Glow level="0.31" />
          </effect>
       </Label>
-      <Button fx:id="BtnActualizarCantidad" layoutX="467.0" layoutY="348.0" mnemonicParsing="false" onAction="#btnActualizarCantidadClicked" style="-fx-background-color: FFAA00;" text="Actualizar Cantidad" />
+      <TableView fx:id="bachasSinStockTable" layoutX="509.0" layoutY="149.0" prefHeight="353.0" prefWidth="305.0" />
+      <Label layoutX="551.0" layoutY="96.0" prefHeight="39.0" prefWidth="236.0" text="Bachas sin Stock">
+         <font>
+            <Font name="System Bold" size="32.0" />
+         </font>
+         <effect>
+            <Glow level="0.31" />
+         </effect>
+      </Label>
    </children>
 </AnchorPane>
