--- a/src/main/java/com/verona/view/dashboardSeller.fxml
+++ b/src/main/java/com/verona/view/dashboardSeller.fxml
@@ -6,20 +6,19 @@
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="655.0" prefWidth="1279.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.seller.DashboardSellerController">
+<AnchorPane prefHeight="197.0" prefWidth="747.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.seller.DashboardSellerController">
    <children>
-      <Label layoutX="14.0" layoutY="85.0" text="Fecha:">
+      <Label layoutX="507.0" layoutY="69.0" text="Fecha:">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font></Label>
-      <Label fx:id="fechaLabel" layoutX="68.0" layoutY="85.0" prefHeight="17.0" prefWidth="111.0" />
-      <ButtonBar layoutX="-6.0" prefHeight="49.0" prefWidth="1310.0">
+      <Label fx:id="fechaLabel" layoutX="557.0" layoutY="68.0" prefHeight="17.0" prefWidth="111.0" />
+      <ButtonBar layoutX="-6.0" layoutY="5.0" prefHeight="44.0" prefWidth="753.0">
          <buttons>
             <Button fx:id="btnBachas" mnemonicParsing="false" onAction="#btnBachasClicked" style="-fx-background-color: ffaa00;" text="Bachas">
                <font>
@@ -53,22 +52,19 @@
                </effect></Button>
          </buttons>
       </ButtonBar>
-      <Label layoutX="40.0" layoutY="147.0" text="Dolar BNA">
+      <Label layoutX="57.0" layoutY="69.0" text="Dolar BNA">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font>
       </Label>
-      <Label fx:id="dolarOficialLabelToComplete" alignment="CENTER" contentDisplay="CENTER" layoutX="17.0" layoutY="187.0" prefHeight="17.0" prefWidth="111.0" textAlignment="CENTER" textFill="#0084ff">
+      <Label fx:id="dolarOficialLabelToComplete" alignment="CENTER" contentDisplay="CENTER" layoutX="34.0" layoutY="94.0" prefHeight="17.0" prefWidth="111.0" textAlignment="CENTER" textFill="#0084ff">
          <font>
             <Font name="Arial Bold" size="28.0" />
          </font></Label>
-      <Separator layoutX="-1.0" layoutY="50.0" prefHeight="17.0" prefWidth="1301.0" />
-      <Separator layoutX="-3.0" layoutY="121.0" prefHeight="10.0" prefWidth="1301.0" />
-      <TableView fx:id="tablaVentasResumen" prefHeight="400.0" prefWidth="1304.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="250.0" />
-      <Separator layoutX="323.0" layoutY="125.0" orientation="VERTICAL" prefHeight="124.0" prefWidth="11.0" />
-      <TableView fx:id="bachasTablaPreview" layoutX="711.0" layoutY="125.0" prefHeight="124.0" prefWidth="592.0" />
-      <Separator layoutX="708.0" layoutY="125.0" orientation="VERTICAL" prefHeight="124.0" prefWidth="0.0" />
-      <Button fx:id="btnVerIngresosConCredito" layoutX="796.0" layoutY="73.0" mnemonicParsing="false" onAction="#btnVerIngresosConCreditoClicked" style="-fx-background-color: Black;" text="Verificar Ingresos con Tarjeta Credito" textFill="WHITE">
+      <Separator layoutX="-1.0" layoutY="50.0" prefHeight="17.0" prefWidth="763.0" />
+      <Separator layoutX="376.0" layoutY="57.0" orientation="VERTICAL" prefHeight="137.0" prefWidth="6.0" />
+      <Separator layoutX="757.0" layoutY="57.0" orientation="VERTICAL" prefHeight="137.0" prefWidth="0.0" />
+      <Button fx:id="btnVerIngresosConCredito" layoutX="432.0" layoutY="98.0" mnemonicParsing="false" onAction="#btnVerIngresosConCreditoClicked" style="-fx-background-color: Black;" text="Verificar Ingresos con Tarjeta Credito" textFill="WHITE">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font>
@@ -80,27 +76,20 @@
             </DropShadow>
          </effect>
       </Button>
-      <Button fx:id="btnRealizarPresupuesto" layoutX="434.0" layoutY="142.0" mnemonicParsing="false" onAction="#btnRealizarPresupuestoClicked" style="-fx-background-color: Black;" text="Realizar Presupuesto" textFill="WHITE">
-         <font>
-            <Font name="Arial Bold" size="13.0" />
-         </font>
-         <effect>
-            <DropShadow>
-               <color>
-                  <Color opacity="0.6000000238418579" />
-               </color>
-            </DropShadow>
-         </effect>
-      </Button>
-      <Separator layoutX="154.0" layoutY="126.0" orientation="VERTICAL" prefHeight="124.0" prefWidth="6.0" />
-      <Label layoutX="203.0" layoutY="147.0" text="Dolar Blue">
+      <Separator layoutX="183.0" layoutY="59.0" orientation="VERTICAL" prefHeight="137.0" prefWidth="6.0" />
+      <Label layoutX="254.0" layoutY="69.0" text="Dolar Blue">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font>
       </Label>
-      <Label fx:id="dolarBlueLabelToComplete" alignment="CENTER" contentDisplay="CENTER" layoutX="185.0" layoutY="187.0" prefHeight="17.0" prefWidth="102.0" textAlignment="CENTER" textFill="#379e00">
+      <Label fx:id="dolarBlueLabelToComplete" alignment="CENTER" contentDisplay="CENTER" layoutX="236.0" layoutY="94.0" prefHeight="17.0" prefWidth="102.0" textAlignment="CENTER" textFill="#379e00">
          <font>
             <Font name="Arial Bold" size="28.0" />
          </font></Label>
+      <Separator layoutX="-1.0" layoutY="135.0" prefHeight="4.0" prefWidth="763.0" />
+      <Separator layoutX="1.0" layoutY="193.0" prefHeight="4.0" prefWidth="753.0" />
+      <Button fx:id="btnVerPrecioBachas" layoutX="23.0" layoutY="153.0" mnemonicParsing="false" onAction="#btnVerPrecioBachasClicked" text="Ver Precio de Bachas" />
+      <Button fx:id="btnVerPrecioManoObra" layoutX="210.0" layoutY="153.0" mnemonicParsing="false" onAction="#btnVerPrecioManoObraClicked" text="Ver Precio mano de Obra" />
+      <Button fx:id="btnVerPrecioMateriales" layoutX="404.0" layoutY="153.0" mnemonicParsing="false" onAction="#btnVerPrecioMaterialesClicked" text="Ver Precio Materiales" />
    </children>
 </AnchorPane>
