--- a/src/main/java/com/verona/view/managerDashboard.fxml
+++ b/src/main/java/com/verona/view/managerDashboard.fxml
@@ -102,22 +102,7 @@
           <NumberAxis side="LEFT" />
         </yAxis>
       </LineChart>
-      <Separator layoutX="399.0" layoutY="83.0" prefHeight="11.0" prefWidth="400.0">
-         <effect>
-            <DropShadow>
-               <color>
-                  <Color opacity="0.20000000298023224" />
-               </color>
-            </DropShadow>
-         </effect></Separator>
-      <Button fx:id="btnRealizarPrespuesto" layoutX="522.0" layoutY="51.0" mnemonicParsing="false" onAction="#btnRealizarPresupuestoClicked" prefHeight="26.0" style="-fx-background-color: Black;" text="Realizar Prespuesto" textFill="WHITE">
-         <effect>
-            <DropShadow />
-         </effect>
-         <font>
-            <Font name="Arial Bold" size="13.0" />
-         </font></Button>
-      <Label layoutX="439.0" layoutY="110.0" text="Dolar BNA" textFill="#0084ff">
+      <Label layoutX="445.0" layoutY="60.0" text="Dolar BNA" textFill="#0084ff">
          <font>
             <Font name="Arial Bold" size="19.0" />
          </font>
@@ -129,7 +114,7 @@
             </DropShadow>
          </effect>
       </Label>
-      <Label fx:id="dolarOficialLabelToComplete" alignment="CENTER" contentDisplay="CENTER" layoutX="412.0" layoutY="150.0" prefHeight="17.0" prefWidth="150.0" textAlignment="CENTER">
+      <Label fx:id="dolarOficialLabelToComplete" alignment="CENTER" contentDisplay="CENTER" layoutX="418.0" layoutY="108.0" prefHeight="17.0" prefWidth="150.0" textAlignment="CENTER">
          <font>
             <Font name="Arial Bold" size="28.0" />
          </font></Label>
@@ -154,7 +139,7 @@
       </Separator>
       <Label fx:id="entradasDiaLabel" layoutX="585.0" layoutY="285.0" prefHeight="17.0" prefWidth="126.0" />
       <Label fx:id="salidasDiaLabel" layoutX="578.0" layoutY="322.0" prefHeight="17.0" prefWidth="126.0" />
-      <Button fx:id="btnActualizarPrecios" layoutX="528.0" layoutY="377.0" mnemonicParsing="false" onAction="#btnActualizarPreciosClicked" style="-fx-background-color: Black;" text="Actualizar Precios" textFill="WHITE">
+      <Button fx:id="btnActualizarPrecios" layoutX="534.0" layoutY="370.0" mnemonicParsing="false" onAction="#btnActualizarPreciosClicked" style="-fx-background-color: Black;" text="Actualizar Precios" textFill="WHITE">
          <effect>
             <DropShadow>
                <color>
@@ -166,8 +151,8 @@
             <Font name="Arial Bold" size="13.0" />
          </font>
       </Button>
-      <Separator layoutX="596.0" layoutY="89.0" orientation="VERTICAL" prefHeight="171.0" prefWidth="0.0" />
-      <Label layoutX="648.0" layoutY="110.0" text="Dolar Blue" textFill="#06b900">
+      <Separator layoutX="596.0" layoutY="47.0" orientation="VERTICAL" prefHeight="213.0" prefWidth="3.0" />
+      <Label layoutX="648.0" layoutY="60.0" text="Dolar Blue" textFill="#06b900">
          <font>
             <Font name="Arial Bold" size="19.0" />
          </font>
@@ -179,10 +164,34 @@
             </DropShadow>
          </effect>
       </Label>
-      <Label fx:id="dolarBlueLabelToComplete" alignment="CENTER" contentDisplay="CENTER" layoutX="633.0" layoutY="150.0" prefHeight="32.0" prefWidth="126.0" textAlignment="CENTER">
+      <Label fx:id="dolarBlueLabelToComplete" alignment="CENTER" contentDisplay="CENTER" layoutX="633.0" layoutY="108.0" prefHeight="32.0" prefWidth="126.0" textAlignment="CENTER">
          <font>
             <Font name="Arial Bold" size="28.0" />
          </font>
       </Label>
+      <Button fx:id="btnVerPrecioManoObra" layoutX="506.0" layoutY="417.0" mnemonicParsing="false" onAction="#btnVerPrecioManoObraClicked" style="-fx-background-color: FFAA00;" text="Ver Precios Mano de Obra">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Button>
+      <Button fx:id="btnVerPrecioMateriales" layoutX="405.0" layoutY="461.0" mnemonicParsing="false" onAction="#btnVerPrecioMaterialesClicked" prefHeight="24.0" prefWidth="150.0" style="-fx-background-color: FFAA00;" text="Ver Precio Materiales">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Button>
+      <Button fx:id="btnVerPrecioBachas" layoutX="630.0" layoutY="461.0" mnemonicParsing="false" onAction="#btnVerPrecioBachasClicked" style="-fx-background-color: FFAA00;" text="Ver Precio Bachas">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Button>
    </children>
 </AnchorPane>
